--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,7 +13,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        ruby: ['2.6', '2.7', '3.0']
+        ruby: ['2.6', '2.7', '3.0', '3.1']
         gemfile:
           - rails_5_2
           - rails_6_0
@@ -21,6 +21,9 @@ jobs:
           - rails_7_0
           - rails_main
         exclude:
+          - ruby: '3.1'
+            gemfile: rails_5_2
+
           - ruby: '3.0'
             gemfile: rails_5_2
 
@@ -54,7 +57,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        ruby: ['2.6', '2.7', '3.0']
+        ruby: ['2.6', '2.7', '3.0', '3.1']
         gemfile:
           - rails_5_2
           - rails_6_0
@@ -62,6 +65,9 @@ jobs:
           - rails_7_0
           - rails_main
         exclude:
+          - ruby: '3.1'
+            gemfile: rails_5_2
+
           - ruby: '3.0'
             gemfile: rails_5_2
 
@@ -110,7 +116,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        ruby: ['2.6', '2.7', '3.0']
+        ruby: ['2.6', '2.7', '3.0', '3.1']
         gemfile:
           - rails_5_2
           - rails_6_0
@@ -118,6 +124,9 @@ jobs:
           - rails_7_0
           - rails_main
         exclude:
+          - ruby: '3.1'
+            gemfile: rails_5_2
+
           - ruby: '3.0'
             gemfile: rails_5_2
 
